--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules
+# Node.js
+node_modules/
+
+# Archivos de configuración de IDE
+.vscode/
+.idea/
+
+# Archivos de logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos temporales
+.DS_Store
+Thumbs.db
+
+# Archivos generados por Vue CLI
+dist/
